# format-clock

./: .gitignore  Makefile.am  README.md  configure.ac
po/: LINGUAS  de.po  gnome-shell-extensions-format-clock.pot  ru.po
schemas/: Makefile.am  org.gnome.shell.extensions.format-clock.gschema.xml
src/: extension.js  metadata.json  prefs.js
